--- a/maintenance.html
+++ b/maintenance.html
@@ -3,98 +3,128 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Under Maintenance | Noorussalam Madrasa</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+  <title>404 | Noorussalam Madrasa</title>
+
+  <!-- Bootstrap & AOS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+
   <style>
     body {
-      background: linear-gradient(135deg, #0b5ed7, #74b9ff);
-      height: 100vh;
-      margin: 0;
+      background-color: #0b1d3a;
+      color: #f8f9fa;
       font-family: 'Poppins', sans-serif;
-      color: #fff;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
       text-align: center;
-      overflow: hidden;
+      overflow-x: hidden;
     }
 
-    .maintenance-box {
-      background: rgba(255, 255, 255, 0.1);
-      padding: 40px 50px;
-      border-radius: 20px;
-      box-shadow: 0 8px 25px rgba(0,0,0,0.2);
-      backdrop-filter: blur(8px);
-      animation: fadeIn 1.5s ease forwards;
-      max-width: 500px;
+    header {
+      background: linear-gradient(90deg, #0d47a1, #1976d2);
+      padding: 40px 0;
+      color: #fff;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
     }
 
-    .maintenance-box i {
-      font-size: 60px;
-      color: #ffd700;
+    .page_404 {
+      padding: 80px 0;
+    }
+
+    .four_zero_four_bg {
+      background: url('https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif') no-repeat center;
+      height: 400px;
+      background-size: cover;
       margin-bottom: 20px;
-      animation: spin 3s linear infinite;
     }
 
-    .maintenance-box h2 {
+    .four_zero_four_bg h1 {
+      font-size: 120px;
+      color: #ffd700;
       font-weight: 700;
+      text-shadow: 0 0 15px rgba(255, 215, 0, 0.5);
+      animation: glow 2s ease-in-out infinite alternate;
+    }
+
+    @keyframes glow {
+      from { text-shadow: 0 0 10px #ffd700; }
+      to { text-shadow: 0 0 25px #ffeb3b; }
+    }
+
+    .contant_box_404 h3 {
+      font-size: 28px;
+      color: #fff;
       margin-bottom: 10px;
     }
 
-    .maintenance-box p {
-      font-size: 15px;
-      color: #e8f0ff;
-      margin-bottom: 30px;
+    .contant_box_404 p {
+      color: #d0d3d8;
+      margin-bottom: 25px;
     }
 
-    .back-btn {
-      background: #fff;
-      color: #0b5ed7;
-      font-weight: 600;
-      padding: 10px 25px;
-      border-radius: 25px;
+    .link_404 {
       text-decoration: none;
-      transition: all 0.3s ease;
-    }
-    .back-btn:hover {
       background: #ffd700;
-      color: #0b5ed7;
-      transform: scale(1.05);
+      color: #0b1d3a;
+      padding: 10px 30px;
+      border-radius: 30px;
+      font-weight: 600;
+      transition: 0.3s;
+    }
+
+    .link_404:hover {
+      background: #fff;
+      color: #0d47a1;
+      box-shadow: 0 5px 15px rgba(255,215,0,0.4);
     }
 
     footer {
-      position: absolute;
-      bottom: 15px;
-      font-size: 14px;
-      color: rgba(255,255,255,0.8);
-    }
-
-    /* Animations */
-    @keyframes spin {
-      0% { transform: rotate(0); }
-      100% { transform: rotate(360deg); }
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
+      background: #06142c;
+      color: #d0d3d8;
+      padding: 15px 0;
+      margin-top: 40px;
     }
   </style>
 </head>
 <body>
 
-  <div class="maintenance-box">
-    <i class="fa-solid fa-gear"></i>
-    <h2>Under Maintenance</h2>
-    <p>We’re currently improving this section of the Noorussalam Madrasa website.<br>
-       Please check back soon for updates.</p>
-    <a href="index.html" class="back-btn"><i class="fa fa-home"></i> Back to Home</a>
-  </div>
+  <!-- HEADER -->
+  <header data-aos="fade-down">
+    <h2 class="mb-1">Noorussalam Madrasa</h2>
+    <p class="mb-0">Sorry, the page you are looking for doesn’t exist</p>
+  </header>
 
-  <footer>
-    © 2025 Noorussalam Madrasa • All Rights Reserved
+  <!-- 404 SECTION -->
+  <section class="page_404">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-8" data-aos="zoom-in">
+          <div class="four_zero_four_bg">
+            <h1>404</h1>
+          </div>
+
+          <div class="contant_box_404" data-aos="fade-up" data-aos-delay="300">
+            <h3>Looks like you're lost</h3>
+            <p>The page you are looking for is not available!</p>
+            <a href="index.html" class="link_404">← Go to Home</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer data-aos="fade-up">
+    <small>© 2025 All rights reserved. | Noorussalam Madrasa</small>
   </footer>
+
+  <!-- AOS Script -->
+  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      duration: 1000,
+      once: true,
+      offset: 100
+    });
+  </script>
 
 </body>
 </html>
