--- a/index.html
+++ b/index.html
@@ -217,14 +217,14 @@
         <li class="nav-item"><a class="nav-link active" href="#home">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
         <li class="nav-item"><a class="nav-link" href="#notifications">Notifications</a></li>
-        <li class="nav-item"><a class="nav-link" href="gallery.html" target="_blank">Gallery</a></li>
         <li class="nav-item"><a class="nav-link" href="faculties.html" target="_blank">Staff</a></li>
-        <li class="nav-item"><a class="nav-link" href="downloads.html" target="_blank">Downloads</a></li>
-        <li class="nav-item"><a class="nav-link" href="contact.html" target="_blank">Contact</a></li>
         <li class="nav-item"><a class="nav-link" href="idcard.html" target="_blank">ID Card</a></li>
-        <li class="nav-item"><a class="nav-link" href="https://samastha.info/">Samastha</a></li>
         <li class="nav-item"><a class="nav-link" href="result.html" target="_blank">Result</a></li>
         <li class="nav-item"><a class="nav-link" href="pta.html" target="_blank">PTA</a></li>
+        <li class="nav-item"><a class="nav-link" href="https://samastha.info/">Samastha</a></li>
+        <li class="nav-item"><a class="nav-link" href="downloads.html" target="_blank">Downloads</a></li>
+        <li class="nav-item"><a class="nav-link" href="gallery.html" target="_blank">Gallery</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html" target="_blank">Contact</a></li>
       </ul>
       <a href="student-zone.html" class="btn btn-primary ms-lg-3">student zone</a>
     </div>
@@ -402,10 +402,9 @@
       <div class="col-md-6" data-aos="fade-right">
         <h2 class="fw-bold mb-3">About Madrasa</h2>
         <p style="text-align: justify;">
-          കരുവാരകുണ്ട് പശ്ചിമഘട്ട താഴ് വരയിലെ താളാത്മകമായൊഴുകുന്ന കല്ലന്‍പുഴയുടെ തീരത്തെ പ്രകൃതി രമണീയമായ ഗ്രാമപ്രദേശമാണ് മഞ്ഞള്‍പ്പാറ. ഗ്രാമവാസികള്‍ക്കും തോട്ടത്തൊഴിലാളികള്‍ക്കും അക്കരയിക്കര പോവാന്‍ ബ്രിട്ടീഷുകാര്‍ പണിതീര്‍ത്ത കമ്പികൊണ്ട് നിര്‍മ്മിച്ച തൂക്കുപാലം(കമ്പിപ്പാലം) ഒരു ഗ്രാമത്തിന്റെ നാമമായത് ചരിത്രം.
-
-കര്‍ഷകരും കൂലിവേല തൊഴിലാളികളും നിറഞ്ഞു നില്‍ക്കുന്ന ഈ പ്രദേശം മത വിജ്ഞാന പ്രചാരണത്തിനും ഫലഭൂയിഷ്ഠമായ മണ്ണാണ്.
-മഹല്ലിലെ മത വൈജ്ഞാനിക സ്ഥാപനമാണ് നൂറുസ്സലാം മദ്‌റസ. നാട്ടുകാരുടെ ശ്രമഫലമായി വിലക്ക് വാങ്ങിയ സ്ഥലത്ത് 1989 ല്‍ മര്‍ഹൂം കെ. പി കുഞ്ഞാപ്പു മുസ്ലിയാര്‍ ശിലയിട്ടു. 15.5.1989 ല്‍ തന്നെ കെ. ടി ഉസ്താദ് മദ്‌റസ ഉദ്ഘാടനം ചെയ്തു. 10.6.1989 ല്‍ സമസ്ത കേരള ഇസ്ലാം മത വിദ്യാഭ്യാസ ബോര്‍ഡ് 6110 നമ്പറായി അംഗീകാരം നല്‍കി. പി. ഇസ്മായില്‍ മുസ്ലിയാര്‍ സി. അബ്ദുന്നാസര്‍ മുസ്ലിയാര്‍ എന്നിവരാണ് ആദ്യ ഉസ്താദുമാര്‍
+          കരുവാരകുണ്ട് പശ്ചിമഘട്ട താഴ് വരയിലെ താളാത്മകമായൊഴുകുന്ന കല്ലന്‍പുഴയുടെ തീരത്തെ പ്രകൃതി രമണീയമായ ഗ്രാമപ്രദേശമാണ് മഞ്ഞള്‍പ്പാറ.
+          ഗ്രാമവാസികള്‍ക്കും തോട്ടത്തൊഴിലാളികള്‍ക്കും അക്കരയിക്കര പോവാന്‍ ബ്രിട്ടീഷുകാര്‍ പണിതീര്‍ത്ത കമ്പികൊണ്ട് നിര്‍മ്മിച്ച തൂക്കുപാലം(കമ്പിപ്പാലം) ഒരു ഗ്രാമത്തിന്റെ നാമമായത് ചരിത്രം.
+          കര്‍ഷകരും കൂലിവേല തൊഴിലാളികളും നിറഞ്ഞു നില്‍ക്കുന്ന ഈ പ്രദേശം മത വിജ്ഞാന പ്രചാരണത്തിനും ഫലഭൂയിഷ്ഠമായ മണ്ണാണ്. മഹല്ലിലെ മത വൈജ്ഞാനിക സ്ഥാപനമാണ് നൂറുസ്സലാം മദ്‌റസ. നാട്ടുകാരുടെ ശ്രമഫലമായി വിലക്ക് വാങ്ങിയ സ്ഥലത്ത് 1989 ല്‍ മര്‍ഹൂം കെ. പി കുഞ്ഞാപ്പു മുസ്ലിയാര്‍ ശിലയിട്ടു. 15.5.1989 ല്‍ തന്നെ മര്‍ഹൂം കെ. ടി ഉസ്താദ് മദ്‌റസ ഉദ്ഘാടനം ചെയ്തു. 10.6.1989 ല്‍ സമസ്ത കേരള ഇസ്ലാം മത വിദ്യാഭ്യാസ ബോര്‍ഡ് 6110 നമ്പറായി അംഗീകാരം നല്‍കി.മര്‍ഹൂം പി. ഇസ്മായില്‍ മുസ്ലിയാര്‍ സി. അബ്ദുന്നാസര്‍ മുസ്ലിയാര്‍ എന്നിവരാണ് ആദ്യ ഉസ്താദുമാര്‍
         </p>
       </div>
       <div class="col-md-6 text-center" data-aos="fade-left">
@@ -554,5 +553,6 @@
 
 </body>
 </html>
+
 
 
