--- a/pta.html
+++ b/pta.html
@@ -97,7 +97,7 @@
             <img src="https://i.ibb.co/WNk2xXp3/abdumangalath.jpg" alt="President">
             <h6 class="fw-bold mt-3">ABDU MANGALATH</h6>
             <small class="pta-role d-block">PRESIDENT</small>
-            <small class="d-block text-light">📞 9745234567</small>
+            <small class="d-block text-light">📞 8281206676</small>
             <p class="pta-about">Leading the PTA with vision and dedication, fostering collaboration between parents and teachers.</p>
           </div>
         </div>
@@ -108,7 +108,7 @@
             <img src="https://i.ibb.co/pvnbMsDr/FAIROOS.jpg" alt="Secretary">
             <h6 class="fw-bold mt-3">FAIROOSUDHEEN P</h6>
             <small class="pta-role d-block">GENERAL SECRETARY</small>
-            <small class="d-block text-light">📞 9847132567</small>
+            <small class="d-block text-light">📞 9497349254</small>
             <p class="pta-about">Coordinates all PTA activities and maintains strong communication among members.</p>
           </div>
         </div>
@@ -119,7 +119,7 @@
             <img src="https://i.ibb.co/7xzp475Q/SALEEM.jpg" alt="Treasurer">
             <h6 class="fw-bold mt-3">SAIF SALEEM P</h6>
             <small class="pta-role d-block">TREASURER</small>
-            <small class="d-block text-light">📞 9567341256</small>
+            <small class="d-block text-light">📞 9961236409</small>
             <p class="pta-about">Responsible for managing PTA funds and ensuring financial transparency and growth.</p>
           </div>
         </div>
@@ -145,20 +145,20 @@
       <div class="row g-4">
         <div class="col-md-4" data-aos="zoom-in" data-aos-delay="100">
           <div class="pta-card text-center">
-            <h6 class="fw-bold text-warning">Parent Awareness Program</h6>
-            <p class="pta-about">A seminar on effective parenting and building strong home-school partnerships.</p>
+            <h6 class="fw-bold text-warning">Activity 1</h6>
+            <p class="pta-about">A seminar for parents.</p>
           </div>
         </div>
         <div class="col-md-4" data-aos="zoom-in" data-aos-delay="200">
           <div class="pta-card text-center">
             <h6 class="fw-bold text-warning">Campus Clean-Up Day</h6>
-            <p class="pta-about">Parents, teachers, and students joined hands to beautify the school environment.</p>
+            <p class="pta-about">Parents, teachers, and students joined hands to beautify environment.</p>
           </div>
         </div>
         <div class="col-md-4" data-aos="zoom-in" data-aos-delay="300">
           <div class="pta-card text-center">
             <h6 class="fw-bold text-warning">Annual PTA Meeting</h6>
-            <p class="pta-about">Discussed curriculum updates, safety measures, and student welfare initiatives.</p>
+            <p class="pta-about">condected on sunday on words .</p>
           </div>
         </div>
       </div>
@@ -187,3 +187,4 @@
 
 </body>
 </html>
+
