--- a/index.html
+++ b/index.html
@@ -402,10 +402,7 @@
       <div class="col-md-6" data-aos="fade-right">
         <h2 class="fw-bold mb-3">About Madrasa</h2>
         <p style="text-align: justify;">
-          കരുവാരകുണ്ട് പശ്ചിമഘട്ട താഴ് വരയിലെ താളാത്മകമായൊഴുകുന്ന കല്ലന്‍പുഴയുടെ തീരത്തെ പ്രകൃതി രമണീയമായ ഗ്രാമപ്രദേശമാണ് മഞ്ഞള്‍പ്പാറ.
-          ഗ്രാമവാസികള്‍ക്കും തോട്ടത്തൊഴിലാളികള്‍ക്കും അക്കരയിക്കര പോവാന്‍ ബ്രിട്ടീഷുകാര്‍ പണിതീര്‍ത്ത കമ്പികൊണ്ട് നിര്‍മ്മിച്ച തൂക്കുപാലം(കമ്പിപ്പാലം) ഒരു ഗ്രാമത്തിന്റെ നാമമായത് ചരിത്രം.
-          കര്‍ഷകരും കൂലിവേല തൊഴിലാളികളും നിറഞ്ഞു നില്‍ക്കുന്ന ഈ പ്രദേശം മത വിജ്ഞാന പ്രചാരണത്തിനും ഫലഭൂയിഷ്ഠമായ മണ്ണാണ്. മഹല്ലിലെ മത വൈജ്ഞാനിക സ്ഥാപനമാണ് നൂറുസ്സലാം മദ്‌റസ. നാട്ടുകാരുടെ ശ്രമഫലമായി വിലക്ക് വാങ്ങിയ സ്ഥലത്ത് 1989 ല്‍ മര്‍ഹൂം കെ. പി കുഞ്ഞാപ്പു മുസ്ലിയാര്‍ ശിലയിട്ടു. 15.5.1989 ല്‍ തന്നെ മര്‍ഹൂം കെ. ടി ഉസ്താദ് മദ്‌റസ ഉദ്ഘാടനം ചെയ്തു. 10.6.1989 ല്‍ സമസ്ത കേരള ഇസ്ലാം മത വിദ്യാഭ്യാസ ബോര്‍ഡ് 6110 നമ്പറായി അംഗീകാരം നല്‍കി.മര്‍ഹൂം പി. ഇസ്മായില്‍ മുസ്ലിയാര്‍ സി. അബ്ദുന്നാസര്‍ മുസ്ലിയാര്‍ എന്നിവരാണ് ആദ്യ ഉസ്താദുമാര്‍
-        </p>
+          കരുവാരകുണ്ട് പശ്ചിമഘട്ട താഴ്വരയിലെ താളാത്മകമായൊഴുകുന്ന കല്ലൻപുഴയുടെ തീരത്തുള്ള പ്രകൃതിരമണീയമായ ഗ്രാമപ്രദേശമാണ് മഞ്ഞൾപ്പാറ. കർഷകരും കൂലിവേല തൊഴിലാളികളും നിറഞ്ഞുനിൽക്കുന്ന ഈ ഗ്രാമത്തിന് അതിന്റെ പേര് ലഭിച്ചത് ചരിത്രപരമായ ഒരു നിർമ്മിതിയിൽ നിന്നാണ്. ഗ്രാമവാസികൾക്കും തോട്ടത്തൊഴിലാളികൾക്കും അക്കരെയിക്കരെ പോവാനായി ബ്രിട്ടീഷുകാർ പണിതീർത്ത കമ്പികൊണ്ടുള്ള തൂക്കുപാലം (കമ്പിപ്പാലം) ആയിരുന്നു അത്; എന്നാൽ ഈ ചരിത്രസ്മാരകം ഇപ്പോൾ നിലവിലില്ല. മതവിജ്ഞാന പ്രചാരണത്തിന് പ്രാധാന്യം നൽകുന്ന ഈ പ്രദേശത്തെ പ്രധാന മത വൈജ്ഞാനിക സ്ഥാപനമാണ് നൂറുസ്സലാം മദ്‌റസ. നാട്ടുകാരുടെ ശ്രമഫലമായി വിലക്ക് വാങ്ങിയ സ്ഥലത്ത് 1989-ൽ മർഹൂം കെ. പി. കുഞ്ഞാപ്പു മുസ്ലിയാർ ശിലയിടുകയും, അതേ വർഷം 15.05.1989-ന് മർഹൂം കെ. ടി. ഉസ്താദ് മദ്‌റസ ഉദ്ഘാടനം ചെയ്യുകയും ചെയ്തു. 10.06.1989-ന് സമസ്ത കേരള ഇസ്‌ലാം മത വിദ്യാഭ്യാസ ബോർഡ് 6110 നമ്പറായി അംഗീകാരം നൽകിയ ഈ സ്ഥാപനത്തിലെ ആദ്യ ഉസ്താദുമാർ മർഹൂം പി. ഇസ്‌മായിൽ മുസ്ലിയാർ, സി. അബ്ദുന്നാസർ മുസ്ലിയാർ എന്നിവരായിരുന്നു.
       </div>
       <div class="col-md-6 text-center" data-aos="fade-left">
         <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" alt="students" class="img-fluid shadow-lg">
@@ -553,6 +550,7 @@
 
 </body>
 </html>
+
 
 
 
