--- a/index.html
+++ b/index.html
@@ -402,8 +402,7 @@
       <div class="col-md-6" data-aos="fade-right">
         <h2 class="fw-bold mb-3">About Madrasa</h2>
         <p style="text-align: justify;">
-          കരുവാരകുണ്ട് പശ്ചിമഘട്ട താഴ്വരയിലെ താളാത്മകമായൊഴുകുന്ന കല്ലൻപുഴയുടെ തീരത്തുള്ള പ്രകൃതിരമണീയമായ ഗ്രാമപ്രദേശമാണ് മഞ്ഞൾപ്പാറ. കർഷകരും കൂലിവേല തൊഴിലാളികളും നിറഞ്ഞുനിൽക്കുന്ന ഈ ഗ്രാമത്തിന് അതിന്റെ പേര് ലഭിച്ചത് ചരിത്രപരമായ ഒരു നിർമ്മിതിയിൽ നിന്നാണ്. ഗ്രാമവാസികൾക്കും തോട്ടത്തൊഴിലാളികൾക്കും അക്കരെയിക്കരെ പോവാനായി ബ്രിട്ടീഷുകാർ പണിതീർത്ത കമ്പികൊണ്ടുള്ള തൂക്കുപാലം (കമ്പിപ്പാലം) ആയിരുന്നു അത്; എന്നാൽ ഈ ചരിത്രസ്മാരകം ഇപ്പോൾ നിലവിലില്ല. മതവിജ്ഞാന പ്രചാരണത്തിന് പ്രാധാന്യം നൽകുന്ന ഈ പ്രദേശത്തെ പ്രധാന മത വൈജ്ഞാനിക സ്ഥാപനമാണ് നൂറുസ്സലാം മദ്‌റസ. നാട്ടുകാരുടെ ശ്രമഫലമായി വിലക്ക് വാങ്ങിയ സ്ഥലത്ത് 1989-ൽ മർഹൂം കെ. പി. കുഞ്ഞാപ്പു മുസ്ലിയാർ ശിലയിടുകയും, അതേ വർഷം 15.05.1989-ന് മർഹൂം കെ. ടി. ഉസ്താദ് മദ്‌റസ ഉദ്ഘാടനം ചെയ്യുകയും ചെയ്തു. 10.06.1989-ന് സമസ്ത കേരള ഇസ്‌ലാം മത വിദ്യാഭ്യാസ ബോർഡ് 6110 നമ്പറായി അംഗീകാരം നൽകിയ ഈ സ്ഥാപനത്തിലെ ആദ്യ ഉസ്താദുമാർ മർഹൂം പി. ഇസ്‌മായിൽ മുസ്ലിയാർ, സി. അബ്ദുന്നാസർ മുസ്ലിയാർ എന്നിവരായിരുന്നു.
-      </div>
+മലപ്പുറം ജില്ലയിലെ കരുവാരകുണ്ട് പശ്ചിമഘട്ട താഴ്വരയുടെ മടിത്തട്ടിൽ, കല്ലൻപുഴയുടെ താളാത്മകമായൊഴുകുന്ന തീരത്ത് പ്രകൃതിരമണീയമായി സ്ഥിതിചെയ്യുന്ന ഗ്രാമമാണ് മഞ്ഞൾപ്പാറ. കർഷകരും തോട്ടം തൊഴിലാളികളും തിങ്ങിപ്പാർക്കുന്ന ഈ ഗ്രാമത്തിന് അതിന്റെ പേര് ലഭിച്ചത് ചരിത്രത്തിൽ ഇടംനേടിയ ഒരു നിർമ്മിതിയിൽ നിന്നാണ്. ബ്രിട്ടീഷ് ഭരണകാലത്ത്, പുഴയുടെ ഇരുകരകളെയും ബന്ധിപ്പിക്കാൻ വേണ്ടി സ്ഥാപിച്ച കമ്പികൊണ്ടുള്ള തൂക്കുപാലം (കമ്പിപ്പാലം) ഒരു കാലത്ത് ഈ പ്രദേശത്തിന്റെ ജീവനാഡിയായിരുന്നു; എന്നാൽ ആ ചരിത്രപരമായ പാലം ഇന്ന് മാഞ്ഞുപോയിരിക്കുന്നു. സാമൂഹിക ജീവിതത്തോടൊപ്പം മതവിജ്ഞാന പ്രചാരണത്തിനും മഞ്ഞൾപ്പാറ എന്നും ഫലഭൂയിഷ്ഠമായ മണ്ണാണ് നൽകിയത്. ഈ പാരമ്പര്യത്തിന്റെ പ്രതീകമാണ് മഹല്ലിലെ നൂറുസ്സലാം മദ്‌റസ. നാട്ടുകാരുടെ കൂട്ടായ പരിശ്രമത്തിന്റെ ഫലമായി 1989-ൽ മർഹൂം കെ. പി. കുഞ്ഞാപ്പു മുസ്ലിയാർ ശിലയിട്ട ഈ സ്ഥാപനം, അതേ വർഷം മർഹൂം കെ. ടി. ഉസ്താദിന്റെ നേതൃത്വത്തിൽ ഉദ്ഘാടനം ചെയ്യപ്പെട്ടു. തുടർന്ന് 10.06.1989-ന് സമസ്ത കേരള ഇസ്‌ലാം മത വിദ്യാഭ്യാസ ബോർഡിന്റെ 6110-ാം നമ്പറായി അംഗീകാരം നേടിയ ഈ മദ്‌റസയുടെ ആദ്യ ഉസ്താദുമാർ മർഹൂം പി. ഇസ്‌മായിൽ മുസ്ലിയാർ, സി. അബ്ദുന്നാസർ മുസ്ലിയാർ എന്നിവരായിരുന്നു.      </div>
       <div class="col-md-6 text-center" data-aos="fade-left">
         <img src="https://i.ibb.co/bMLmpL7d/unnamed.jpg" alt="students" class="img-fluid shadow-lg">
       </div>
@@ -550,6 +549,7 @@
 
 </body>
 </html>
+
 
 
 
