--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Anek+Malayalam:wght@400;600;700&display=swap" rel="stylesheet">
+
 
   <!-- AOS Animation -->
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
@@ -550,6 +552,7 @@
 
 </body>
 </html>
+
 
 
 
