--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
         <li class="nav-item"><a class="nav-link" href="https://samastha.info/">Samastha</a></li>
         <li class="nav-item"><a class="nav-link" href="downloads.html" target="_blank">Downloads</a></li>
         <li class="nav-item"><a class="nav-link" href="gallery.html" target="_blank">Gallery</a></li>
+        <li class="nav-item"><a class="nav-link" href="login.html" target="_blank">Login</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html" target="_blank">Contact</a></li>
       </ul>
       <a href="student-zone.html" class="btn btn-primary ms-lg-3">student zone</a>
@@ -560,6 +561,7 @@
 
 </body>
 </html>
+
 
 
 
