--- a/login.html
+++ b/login.html
@@ -3,122 +3,82 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Noorussalam Madrasa | Admin Login</title>
+    <title>Login/Signup Form</title>
+    <link rel="stylesheet" href="style.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: "Poppins", sans-serif;
-      }
-      body {
-        min-height: 100vh;
-        background: linear-gradient(135deg, #0b5ed7, #3f8efc);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      .container {
-        position: relative;
-        width: 380px;
-        background: #fff;
-        border-radius: 15px;
-        box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
-        padding: 40px 30px;
-        text-align: center;
-      }
-      h1 {
-        margin-bottom: 20px;
-        color: #0b5ed7;
-        font-weight: 700;
-      }
-      .input-box {
-        position: relative;
-        margin-bottom: 20px;
-      }
-      .input-box input {
-        width: 100%;
-        padding: 12px 40px 12px 15px;
-        border: 1px solid #ddd;
-        border-radius: 8px;
-        font-size: 16px;
-      }
-      .input-box i {
-        position: absolute;
-        right: 12px;
-        top: 50%;
-        transform: translateY(-50%);
-        color: #0b5ed7;
-        font-size: 20px;
-      }
-      .btn {
-        width: 100%;
-        background: #0b5ed7;
-        color: #fff;
-        border: none;
-        padding: 10px;
-        border-radius: 8px;
-        font-size: 16px;
-        font-weight: 500;
-        cursor: pointer;
-        transition: 0.3s;
-      }
-      .btn:hover {
-        background: #0846aa;
-      }
-      .error {
-        color: red;
-        margin-top: 10px;
-      }
-      .mad-title {
-        font-size: 14px;
-        color: #555;
-        margin-bottom: 25px;
-      }
-    </style>
   </head>
-
   <body>
     <div class="container">
-      <h1>Admin Login</h1>
-      <div class="mad-title">
-        Noorussalam Secondary Madrasa<br />
-        Kambippalam, Kerala Estate, Malappuram Dt.<br />
-        <small>Email: noorussalam6110@gmail.com</small>
+      <div class="form-box login">
+        <form action="#">
+          <h1>Login</h1>
+          <div class="input-box">
+            <input type="text" placeholder="Username" required />
+            <i class="bx bxs-user"></i>
+          </div>
+          <div class="input-box">
+            <input type="password" placeholder="Password" required />
+            <i class="bx bxs-lock-alt"></i>
+          </div>
+          <div class="forgot-link">
+            <a href="#">Forgot Password?</a>
+          </div>
+          <button type="submit" class="btn">Login</button>
+          <p>or login with social platforms</p>
+          <div class="social-icons">
+            <a href="#"><i class="bx bxl-google"></i></a>
+            <a href="#"><i class="bx bxl-facebook"></i></a>
+            <a href="#"><i class="bx bxl-github"></i></a>
+            <a href="#"><i class="bx bxl-linkedin"></i></a>
+          </div>
+        </form>
       </div>
 
-      <div class="input-box">
-        <input type="text" id="username" placeholder="Username" required />
-        <i class="bx bxs-user"></i>
+      <div class="form-box register">
+        <form action="#">
+          <h1>Registration</h1>
+          <div class="input-box">
+            <input type="text" placeholder="Username" required />
+            <i class="bx bxs-user"></i>
+          </div>
+          <div class="input-box">
+            <input type="email" placeholder="Email" required />
+            <i class="bx bxs-envelope"></i>
+          </div>
+          <div class="input-box">
+            <input type="password" placeholder="Password" required />
+            <i class="bx bxs-lock-alt"></i>
+          </div>
+          <button type="submit" class="btn">Register</button>
+          <p>or register with social platforms</p>
+          <div class="social-icons">
+            <a href="#"><i class="bx bxl-google"></i></a>
+            <a href="#"><i class="bx bxl-facebook"></i></a>
+            <a href="#"><i class="bx bxl-github"></i></a>
+            <a href="#"><i class="bx bxl-linkedin"></i></a>
+          </div>
+        </form>
       </div>
-      <div class="input-box">
-        <input type="password" id="password" placeholder="Password" required />
-        <i class="bx bxs-lock-alt"></i>
+
+      <div class="toggle-box">
+        <div class="toggle-panel toggle-left">
+          <h1>Hello, Welcome!</h1>
+          <p>Don't have an account?</p>
+          <button class="btn register-btn">Register</button>
+        </div>
+
+        <div class="toggle-panel toggle-right">
+          <h1>Welcome Back!</h1>
+          <p>Already have an account?</p>
+          <button class="btn login-btn">Login</button>
+        </div>
       </div>
-      <button class="btn" onclick="login()">Login</button>
-      <p class="error" id="errorMsg"></p>
     </div>
 
-    <script>
-      const ADMIN_USER = "admin";
-      const ADMIN_PASS = "noor123"; // Change this password
-
-      function login() {
-        const user = document.getElementById("username").value.trim();
-        const pass = document.getElementById("password").value.trim();
-        const errorMsg = document.getElementById("errorMsg");
-
-        if (user === ADMIN_USER && pass === ADMIN_PASS) {
-          localStorage.setItem("isLoggedIn", "true");
-          window.location.href = "admin-dashboard.html"; // Redirect to your dashboard
-        } else {
-          errorMsg.textContent = "Invalid username or password!";
-        }
-      }
-    </script>
+    <script src="./script.js"></script>
   </body>
 </html>
+
