--- a/index.html
+++ b/index.html
@@ -558,9 +558,49 @@
     navbar.classList.toggle('scrolled', window.scrollY > 50);
   });
 </script>
+<!-- WhatsApp Chat Button -->
+<a href="https://wa.me/917034678818?text=Hello%20Noorussalam%20Madrasa!" 
+   class="whatsapp-float" target="_blank" 
+   title="Chat with us on WhatsApp">
+  <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" alt="WhatsApp" />
+</a>
+
+<!-- WhatsApp Floating Button Style -->
+<style>
+  .whatsapp-float {
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 20px;
+    right: 20px;
+    background-color: #25d366;
+    color: #fff;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+
+  .whatsapp-float:hover {
+    transform: scale(1.1);
+    box-shadow: 3px 3px 10px rgba(0,0,0,0.4);
+  }
+
+  .whatsapp-float img {
+    width: 35px;
+    height: 35px;
+    filter: brightness(0) invert(1);
+  }
+</style>
 
 </body>
 </html>
+
 
 
 
