--- a/index.html
+++ b/index.html
@@ -558,8 +558,9 @@
     navbar.classList.toggle('scrolled', window.scrollY > 50);
   });
 </script>
-<!-- WhatsApp Chat Button -->
-<a href="https://wa.me/917034678818?text=Hello%20Noorussalam%20Madrasa!" 
+
+  <!-- WhatsApp Chat Button -->
+<a href="https://wa.me/918547895632?text=Hello%20Noorussalam%20Madrasa!" 
    class="whatsapp-float" target="_blank" 
    title="Chat with us on WhatsApp">
   <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" alt="WhatsApp" />
@@ -569,15 +570,15 @@
 <style>
   .whatsapp-float {
     position: fixed;
-    width: 60px;
-    height: 60px;
+    width: 48px;      /* smaller button */
+    height: 48px;
     bottom: 20px;
     right: 20px;
     background-color: #25d366;
     color: #fff;
     border-radius: 50%;
     text-align: center;
-    font-size: 30px;
+    font-size: 24px;
     box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
     z-index: 1000;
     display: flex;
@@ -592,14 +593,16 @@
   }
 
   .whatsapp-float img {
-    width: 35px;
-    height: 35px;
+    width: 26px;      /* smaller icon */
+    height: 26px;
     filter: brightness(0) invert(1);
   }
 </style>
 
+
 </body>
 </html>
+
 
 
 
