--- a/downloads.html
+++ b/downloads.html
@@ -108,7 +108,7 @@
             <div class="card-body">
               <h5 class="card-title fw-bold text-primary">Syllabus (All Classes)</h5>
               <p class="card-text">Get the syllabus for classes 1 to 10 in PDF format.</p>
-              <a href="https://drive.google.com/file/d/1zABRyD9jXArY8pjBgOe42ImEmYllY-0l/view?usp=sharing" download>Download</a>
+              <a href="https://drive.google.com/file/d/1zABRyD9jXArY8pjBgOe42ImEmYllY-0l/view?usp=sharing" class="btn btn-download" download>Download</a>
             </div>
           </div>
         </div>
